--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,13 @@
             android:text="離開"
             android:onClick="exit"
             />
+        <Button
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="手電筒"
+            android:onClick="flash"
+            />
 
     </LinearLayout>
 
